--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- tensorflow -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
+    <!-- estilos -->
     <link rel="stylesheet" href="../src/index.css" />
 
+    <!-- React -->
     <script rel="preload" type="module" src="../src/index.jsx"></script>
 
   </head>
